# c-practice

./: CMakeLists.txt  README.md
study_1/include/: MyTeacher.h
study_1/src/day1/: MyTeacher.cpp  d00_classmain.cpp  d01_mainclass.cpp  d02_mainclass.cpp  d03_mianclass.cpp  d04_mainclass.cpp  d05_mainclass.cpp
study_1/src/homeWork/: MyArray.cpp  MyArray.h
