cmake_minimum_required(VERSION 3.15)
project(cPlus)

set(CMAKE_CXX_STANDARD 14)

#add_executable(cPlus main.cpp study_1/src/day1/MyTeacher.cpp
#        study_1/include/MyTeacher.h
#        study_1/src/day1/d00_classmain.cpp
#        study_1/src/day1/d01_mainclass.cpp
#        study_1/src/day1/d02_mainclass.cpp
#        study_1/src/day1/d03_mianclass.cpp
#        )

#add_executable(cPlus study_1/src/day1/d03_mianclass.cpp study_1/src/homeWork/MyArray.cpp study_1/src/homeWork/MyArray.h)

add_executable(cPlus study_1/src/day1/d05_mainclass.cpp)